@@ -13,6 +13,7 @@
 - added: NOSQL/TABLE modify supports a new type `$age: 'js_code'` with some JS code
 - added: NOSQL/TABLE update supports a new type `'js_code'` with some JS code
 - added: a new config item `default-restbuilder-timeout : 10000`
+- added: a new config item `logger : false` which enables logging for Middleware, Schemas and Operations
 
 - updated: `debug` mode creates a `start_name_script.pid` instead of `debug.pid`
 - updated: `NEWOPERATION()` supports `repeat` and `stop` argument
